--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,5 +1,5 @@
   
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
 
-$brandColor: #103A7E;
+$brandColor: #0282FA;
 $navFont: 'Roboto Condensed';
