Modifiche varie del codice

--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -1,11 +1,7 @@
 @import "./variables";
 
 body {
-    font-family: $navFont, sans-serif;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: $navFont, sans-serif;
+    font-family: $Font, sans-serif;
 }
 
 * {
