--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -2,4 +2,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
 
 $brandColor: #0282FA;
-$navFont: 'Roboto Condensed';
+$bgColor:#1C1C1C;
+$Font: 'Roboto Condensed';
